# IFL_Gatech_Tools

./: .gitignore  README.md
gps_spoofer/: README.md  project.properties
gps_spoofer/src/: .gps_spoofer.ino.swp  configs.h  gps_spoofer.ino  messages.h
photon_spoofer/: CMakeLists.txt  spoofer
photon_spoofer/app/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
photon_spoofer/app/app/: Makefile  cmake_install.cmake
photon_spoofer/app/src/: Makefile  cmake_install.cmake
photon_spoofer/inc/: UBX.h  messages.h  simUAV.h
photon_spoofer/src/: .UBX.cpp.swp  CMakeLists.txt  UBX.cpp  simUAV.cpp
